* fix bug: scroll position will now set correctly on update userlist/roomlist * easier message handling * fix style in userlist with scrollbar

--- a/app/main.css
+++ b/app/main.css
@@ -196,7 +196,7 @@ body {
 /* contact list */
 
 .mCSB_container {
-    margin-right:0;
+    margin-right:0 !important;
 }
 
     .mCSB_scrollTools .mCSB_draggerContainer {
